lib/src/compiler/tests/testdata/errors/70.out
error[E001]: syntax error
 --> line:1:22
  |
1 | rule test { strings: condition: true }
  |                      ^ expected pattern identifier
  |